[package]
name = "simpleaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
clap = { version = ">=3.2.12", features = ["derive", "wrap_help", "cargo", "deprecated", "wrap_help"]} 
cmd_lib = "^1.3.0"
which = "^4.2.5"
semver = "^1.0.12"


[profile.release]
lto = "thin"
opt-level = 3
